feat(web): Add icon app logos

--- a/web/index.html
+++ b/web/index.html
@@ -2,14 +2,16 @@
 <html lang="es">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Align Mind" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
+  <meta name="description"
+    content="Alignmind is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way." />
+  <meta name="keywords"
+    content="Mindfulyze, web application, tracking emotions, tracking thoughts, reflecting on emotions, reflecting on thoughts, record emotions, record thoughts, Evaluate thoughts, user evaluation, writing thoughts, detailed evaluation, emotional frequency, emotional patterns, emotional wellbeing, thought management, emotional management">
+  <link rel="apple-touch-icon" href="/logo192x192.png" />
   <link rel="manifest" href="/manifest.json" />
-  <title>AlignMind</title>
+  <title>Mindfulyze</title>
 </head>
 
 <body>
