refactor(web): Add typescript for main file and app file

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="Alignmind is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way." />
+    content="Mindfulyze is a web application for tracking emotions and thoughts. The application was created with the goal of helping you reflect on your emotions and thoughts, and keep a record of them in a simple and organized way." />
   <meta name="keywords"
     content="Mindfulyze, web application, tracking emotions, tracking thoughts, reflecting on emotions, reflecting on thoughts, record emotions, record thoughts, Evaluate thoughts, user evaluation, writing thoughts, detailed evaluation, emotional frequency, emotional patterns, emotional wellbeing, thought management, emotional management">
   <link rel="apple-touch-icon" href="/logo192x192.png" />
@@ -17,7 +17,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
